<resources>
    <string name="app_name">智能V家</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_pwd">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="register">注册账号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="phone_num">手机号码</string>
    <string name="verify_code">短信验证</string>
    <string name="input_verify_code">请输入短信验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="login_pwd">登录密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="input_confirm_pwd">请再次输入密码</string>
    <string name="submit">提交</string>
    <string name="pwd_length">请输入至少6位数密码</string>
    <string name="pwd_unequal">请确认两次密码一致！</string>
    <string name="read_agree">我同意威欧希</string>
    <string name="voc_protocol">《用户注册协议》</string>
    <string name="login_other">其他登录方式</string>
    <string name="no_device">咦，我的指纹锁呢？~~</string>
    <string name="add_device">添加设备</string>
    <string name="clear_record">清除记录</string>
    <string name="share_time">分享时间：</string>
    <string name="reception_state">接受状态：</string>
    <string name="del_record">删除记录</string>
    <string name="share_record">共享记录</string>
    <string name="fingerprint_manage">指纹管理</string>
    <string name="card_manage">卡片管理</string>
    <string name="about_us">关于我们</string>
    <string name="password_manage">密码管理</string>
    <string name="keypad_voice">按键声音</string>
    <string name="safe_mode">安全模式</string>
    <string name="card_opening">卡片开门</string>
    <string name="device_setting">设备设置</string>
    <string name="add_fingerprint">添加指纹</string>
    <string name="left_brackets">（</string>
    <string name="right_brackets">）</string>
    <string name="message_push">广告推送</string>
    <string name="modify_pwd">修改密码</string>
    <string name="contact_service">联系客服</string>
    <string name="guide_use">使用指南</string>
    <string name="logout">退出登录</string>
    <string name="user_info">用户资料</string>
    <string name="tips">提示</string>
    <string name="sure_logout">确认退出登录吗？</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="original_pwd">原始密码</string>
    <string name="input_original_pwd">请输入原始登录密码</string>
    <string name="input_new_pwd">请输入新的登录密码</string>
    <string name="modify">确认修改</string>
    <string name="add_by_scan">扫码添加</string>
    <string name="add_by_scan_desc">请扫描设备后盖二维码添加设备</string>
    <string name="add_by_manual">手动添加</string>
    <string name="add_by_manual_desc">请填写设备后盖二维码下方的SN编号</string>
    <string name="device_type">设备类型</string>
    <string name="nb_lock">NB指纹锁</string>
    <string name="add_desc">请根据您的指纹锁类型添加设备</string>
    <string name="ble_lock">蓝牙指纹锁</string>
    <string name="wifi_lock">Wi-Fi指纹锁</string>
    <string name="ble_wifi_lock">Wi-Fi蓝牙指纹锁</string>
    <string name="fingerprint_relation">指纹关联</string>
    <string name="card_relation">卡片关联</string>
    <string name="view_alarm_record">查看报警记录</string>
    <string name="view_open_record">查看开门记录</string>
    <string name="member_detail">成员详情</string>
    <string name="member_manager">成员管理</string>
    <string name="fingerpring_desc">请输入指纹备注或者关联用户</string>
    <string name="owner">归属人</string>
    <string name="input_fingerprint_remark">请输入指纹备注或选择成员</string>
    <string name="complete">完成</string>
    <string name="alarm_type">报警方式</string>
    <string name="alarm_time">报警时间</string>
    <string name="open_type">开门方式</string>
    <string name="open_time">开门时间</string>
    <string name="alarm_record">报警日志</string>
    <string name="open_record">开门记录</string>
    <string name="place_fingers">放置手指</string>
    <string name="add_fingerprint_desc">请将手指放置指纹锁指纹头上，\n从不同的角度和方向录入，确保指纹完整录入。</string>
    <string name="been_entered">指纹已录入</string>
    <string name="five_times">/5次</string>
    <string name="transfer_admin">转让管理员</string>
    <string name="del_member">删除成员</string>
    <string name="make_sure_ble">我已确认蓝牙已开启</string>
    <string name="search_device">搜索设备</string>
    <string name="stop_search">停止搜索</string>
    <string name="unknow_name">未知设备名称</string>
    <string name="device_name">设备名称</string>
    <string name="device_sn">设备编码</string>
    <string name="device_model">设备型号</string>
    <string name="binding_device">完成添加</string>
    <string name="connecting">正在连接...</string>
    <string name="connect_again">点击进行蓝牙重连</string>
    <string name="hello">，您好！</string>
    <string name="blank"> </string>
    <string name="share_key">分享钥匙</string>
    <string name="share_device">共享设备</string>
    <string name="weather_loading">天气正在加载中...</string>
    <string name="device_list">设备列表</string>
    <string name="share_device_desc">请根据您的指纹锁类型添加设备</string>
    <string name="share_record_desc">请根据您的指纹锁类型添加设备</string>
    <string name="open_lock_time">开锁时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="num_of_unlocks">开锁次数</string>
    <string name="share_to_wechat">共享给微信好友</string>
    <string name="share_to_app">共享给App好友</string>
    <string name="share_setting">共享设置</string>
    <string name="limit">限制</string>
    <string name="no_limit">不限制</string>
    <string name="input_search_phone">请输入对方的手机号码</string>
    <string name="confirm_share">确认分享</string>
    <string name="unbind">解除绑定</string>
    <string name="sure_unbind">确认解绑改设备？</string>
    <string name="share_device_success">设备共享操作成功！</string>
    <string name="share_device_failed">共享设备失败：</string>
    <string name="share_device_cancel">共享设备取消了！</string>
    <string name="share_key_success">分享钥匙操作成功！</string>
    <string name="share_key_failed">分享钥匙失败：</string>
    <string name="share_key_cancel">分享钥匙no_limit取消了！</string>
    <string name="notification_message">通知消息</string>
    <string name="share_key_desc">将临时钥匙通过微信分享给您的朋友</string>
    <string name="device_info">设备信息</string>
    <string name="share_key_record">分享记录</string>
    <string name="click_view">点击查看</string>
    <string name="availability_times">可用次数</string>
    <string name="accept">接受</string>
    <string name="refused">拒绝</string>
    <string name="rejected">已拒绝</string>
    <string name="agreed">已同意</string>
    <string name="logon_invalidation">登录失效，请重新登录！</string>
    <string name="company_name">浙江威欧希科技股份有限公司</string>
    <string name="logon_exception">登录异常，请稍候重试！</string>
    <string name="share_list">分享信息通知</string>
    <string name="colon">：</string>
    <string name="info_lock_name">锁的名称：</string>
    <string name="info_lock_sn">产品编号：</string>
    <string name="info_lock_model">产品型号：</string>
    <string name="info_soft_version">软件版本：</string>
    <string name="info_hardware_version">硬件版本</string>
    <string name="info_register_date">注册日期</string>
    <string name="info_admin_fingerprint">管理指纹：</string>
    <string name="info_master_fingerprint">主人指纹：</string>
    <string name="info_guest_fingerprint">客人指纹：</string>
    <string name="info_admin_card">管理卡片：</string>
    <string name="info_master_card">主人卡片：</string>
    <string name="info_guest_card">客人卡片：</string>
    <string name="head_icon">头像</string>
    <string name="nick_name">昵称</string>
    <string name="phone">手机</string>
    <string name="personal_info">个人信息</string>
    <string name="no_share_device">暂时没有共享设备的记录哦~</string>
    <string name="no_share_key">暂时没有分享钥匙的记录哦~</string>
    <string name="no_alarm_record">好像还没有报警记录哦~</string>
    <string name="no_open_record">好像还没有开门记录哦~</string>
    <string name="no_notify">好像暂时还没有通知消息哦~</string>
    <string name="request_permission">拒绝权限，可能会导致App无法正常使用，是否前往设置菜单重新授权？</string>
    <string name="off_line">咦，网络去哪儿了？</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="admin">拥有者</string>
    <string name="member">成员</string>
    <string name="owner_en">OWNER</string>
    <string name="info_empty">信息不可为空！</string>
    <string name="share_key_remark">（钥匙只能使用一次）</string>
    <string name="sure_del_member">确认删除该成员？</string>
    <string name="search_user">搜索用户</string>
    <string name="share_success_1">共享消息已推送到</string>
    <string name="share_success_2">用户消息页中，</string>
    <string name="share_success_3">您还可以通过微信通知该用户。</string>
    <string name="notify_wechat">通知微信好友</string>
    <string name="cancel_notify">取消操作</string>
    <string name="share_success">分享成功</string>
    <string name="share_user">分享用户</string>
    <string name="member_list">成员列表</string>
    <string name="sure_transfer">确认转让管理员权限？</string>
    <string name="del_device">删除设备</string>
    <string name="sure_del_device">是否确认删除该设备？</string>
    <string name="start_add">开始添加</string>
    <string name="place_finger">放置手指</string>
    <string name="four_times">/4次</string>
    <string name="finger_des">填写指纹编号请注意：\n1 - 10：管理指纹\n11 - 50：主人指纹\n51 - 99：客人指纹</string>
    <string name="input_finger_no">请输入要设置的指纹编号</string>
    <string name="add_complete">添加完成</string>
    <string name="finger_no">指纹编号</string>
    <string name="del">删除</string>
    <string name="sure_del_finger">确认删除该指纹？</string>
    <string name="not_an_admin">您当前不是设备的拥有者，请联系设备拥有者进行操作！</string>
    <string name="all_finger">所有指纹</string>
    <string name="all_user">所有用户</string>
    <string name="connect_device">重连设备</string>
    <string name="reconnect">设备重连中...</string>
    <string name="connect_success">设备连接成功...</string>
    <string name="connect_fail">设备连接失败，请重试...</string>
    <string name="device_disconnect">设备断开了...</string>
    <string name="del_finger">删除指纹</string>
    <string name="no_fingerprint">暂时没有该选项的指纹，如果需要可以进行添加~</string>
    <string name="finger_number">指纹：</string>
    <string name="number">个</string>
    <string name="card_number">卡片：</string>
    <string name="none">NONE</string>
    <string name="save_update">保存更新</string>
</resources>
