<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>

        <import type="android.view.View"/>

        <variable
            name="isRegister"
            type="boolean"/>
    </data>

    <LinearLayout style="@style/ActivityBG">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                style="@style/ActivityBG"
                android:layout_marginStart="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14">

                <LinearLayout
                    style="@style/Item_52"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/line_bg">

                    <TextView
                        style="@style/ItemText"
                        android:textColor="@color/colorInput"
                        android:text="@string/phone_num" />

                    <so.voc.vhome.widget.XEditText
                        android:id="@+id/et_phone"
                        style="@style/EditText"
                        android:maxLength="11"
                        android:hint="@string/input_phone"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    style="@style/Item_52"
                    android:background="@drawable/line_bg">

                    <TextView
                        style="@style/ItemText"
                        android:textColor="@color/colorInput"
                        android:text="@string/verify_code" />

                    <so.voc.vhome.widget.XEditText
                        android:id="@+id/et_verifyCode"
                        style="@style/EditText"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/dp_10"
                        android:hint="@string/input_verify_code"
                        android:inputType="number"
                        android:maxLength="6" />

                    <Button
                        android:id="@+id/btn_verifyCode"
                        android:layout_width="@dimen/dp_86"
                        android:layout_height="@dimen/dp_34"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ellipse_bg"
                        android:onClick="click"
                        android:text="@string/get_verify_code"
                        android:textColor="@color/colorDesc"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <LinearLayout
                    style="@style/Item_52"
                    android:background="@drawable/line_bg">

                    <TextView
                        style="@style/ItemText"
                        android:textColor="@color/colorInput"
                        android:text="@string/login_pwd" />

                    <so.voc.vhome.widget.XEditText
                        android:id="@+id/et_pwd"
                        style="@style/EditText"
                        android:hint="@string/input_pwd"
                        android:inputType="textPassword" />

                </LinearLayout>

                <LinearLayout
                    style="@style/Item_52"
                    android:background="@drawable/line_bg">

                    <TextView
                        style="@style/ItemText"
                        android:textColor="@color/colorInput"
                        android:text="@string/confirm_pwd" />

                    <so.voc.vhome.widget.XEditText
                        android:id="@+id/et_confirmPwd"
                        style="@style/EditText"
                        android:hint="@string/input_confirm_pwd"
                        android:inputType="textPassword" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:visibility="@{isRegister ? View.VISIBLE : View.GONE}">

                    <CheckBox
                        android:id="@+id/cb_agreement"
                        android:layout_width="@dimen/dp_18"
                        android:layout_height="@dimen/dp_18"
                        android:background="@drawable/cb_selector"
                        android:button="@null"/>

                    <TextView
                        style="@style/ItemText"
                        android:text="@string/read_agree"
                        android:textSize="@dimen/sp_12"
                        android:layout_marginLeft="@dimen/dp_10"/>

                    <TextView
                        android:id="@+id/tv_vocProtocol"
                        style="@style/ItemText"
                        android:textColor="@color/colorAuxiliary"
                        android:layout_marginLeft="@dimen/dp_0"
                        android:textSize="@dimen/sp_14"
                        android:text="@string/voc_protocol"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    style="@style/Button"
                    android:onClick="click"
                    android:layout_marginTop="@dimen/dp_26"
                    android:text="@string/submit"
                    android:background="@drawable/btn_selector"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>