<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15"
    android:orientation="vertical">

    <LinearLayout
        style="@style/ActivityBG"
        android:layout_marginBottom="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:background="@drawable/pop_bg">

        <LinearLayout
            style="@style/Item_52"
            android:gravity="center">

            <TextView
                style="@style/TitleText"
                android:text="@string/share_device"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_shareKey"
            style="@style/Item_78"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:background="@drawable/iv_ble_off" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_14"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleText"
                    android:layout_gravity="left"
                    android:text="@string/share_key" />

                <TextView
                    style="@style/ItemText"
                    android:text="@string/share_key_desc" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/Line" />

        <LinearLayout
            android:id="@+id/ll_shareRecord"
            style="@style/Item_78"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:background="@drawable/iv_ble_off" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_14"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleText"
                    android:layout_gravity="left"
                    android:text="@string/share_key_record" />

                <TextView
                    style="@style/ItemText"
                    android:text="@string/share_record_desc" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>