<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="contentBean"
            type="so.voc.vhome.model.KeyShareRecordModel.ContentBean"/>

    </data>

    <LinearLayout style="@style/Item_78">

        <LinearLayout
            style="@style/ActivityBG"
            android:layout_weight="3"
            android:gravity="center_vertical">

            <TextView
                style="@style/TitleText"
                android:layout_gravity="left"
                android:text="@string/share_key" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    style="@style/ItemText"
                    android:text="@string/share_time" />

                <TextView
                    style="@style/ItemText"
                    android:text="@{contentBean.createDate}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:orientation="horizontal">

                <TextView
                    style="@style/ItemText"
                    android:text="@string/reception_state" />

                <TextView
                    style="@style/ItemText"
                    android:text="@{contentBean.statusName}"/>

            </LinearLayout>


        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:id="@+id/ll_delRecord"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center_vertical">-->

        <TextView
            style="@style/ItemText"
            android:textColor="@color/colorRed"
            android:text="@string/del_record"/>


        <!--</LinearLayout>-->

    </LinearLayout>

</layout>